<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    tools:context=".InputMealActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/explain_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/explain_input"
                android:textColor="@color/pink_main"
                android:textSize="24sp" />


            <androidx.cardview.widget.CardView
                android:id="@+id/inputImageCard"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/inputImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_img" />

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/getImageButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/pink_main"
                android:src="@drawable/ic_round_photo_camera_24" />

            <TextView
                android:id="@+id/explain_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explain_date" />

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/explain_date"
                android:inputType="date"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/explain_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/explain_time" />

            <EditText
                android:id="@+id/input_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/explain_time"
                android:inputType="time"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/explain_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explain_type" />

            <Spinner
                android:id="@+id/main_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/explain_type"
                android:layout_marginBottom="20dp"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/explain_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explain_place" />

            <Spinner
                android:id="@+id/sub_place_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/explain_place"
                android:layout_marginBottom="20dp"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/explain_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explain_menu" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_menu_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/explain_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/explain_cost" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_cost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_costs_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/explain_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explain_review" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_review_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/input_button"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/input_button"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>